--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,12 @@
 name = "chatgpt_robusta_actions"
 version = "0.0.1"
 description = ""
-authors = ["Arik Alon <arikalon1@users.noreply.github.com>"]
+authors = []
 
 [tool.poetry.dependencies]
 openai = "^0.27.2"
 cachetools = "^5.3.0"
-
+python = ">=3.7.1,<4.0"
 
 [tool.poetry.dev-dependencies]
 robusta-cli = "^0.10.14"
