--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "chatgpt_robusta_actions"
-version = "0.0.43"
+version = "0.0.44"
 description = ""
 authors = []
 
@@ -8,6 +8,7 @@ authors = []
 openai = "^0.27.2"
 cachetools = "^5.3.0"
 python = ">=3.7.1,<4.0"
+requests = "^2.31.0"
 
 [tool.poetry.dev-dependencies]
 robusta-cli = "^0.10.14"
