--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ authors = []
 [tool.poetry.dependencies]
 openai = "^0.27.2"
 cachetools = "^5.3.0"
-python = ">=3.7.1,<4.0"
+python = ">=3.8,<4.0"
 requests = "^2.31.0"
+opsgenie-sdk = "^2.1.5"
 
 [tool.poetry.dev-dependencies]
 robusta-cli = "^0.10.14"
